case a specific instance of an added task will still have to be inserted
manually after the reload operation). This allows task settings
(environment variables etc.) to be changed without restarting the suite.

+ Higher-level family triggers (families of families) can now be used in
the graph.

+ Fixed a minor bug that could, in usual circumstances, cause cylc not
to recognize the need for another round of task processing and requiring
a manual nudge to get the suite to continue.

+ Documented stepped daily, monthly, and yearly cycling.

+ Added a simple utility command that generates random integers on a
given interval; used for computing random task run lengths in simulation
and dummy mode. 

+ Allow running simulation and dummy mode on the real time clock.

+ Bug fix: Sub-suites now load their own passphrase on start-up, not
that of their parent suite.

+ The gcontrol dot view now has hover-over task state information, and
right-click menus.

+ Added a new "environment scripting" task runtime configuration item.
In the task job script it fits between the cylc-defined environment 
and the task runtime environment.

+ External host selection officially supported (host = selector.sh).

+ The runahead limit base is now the oldest non-finished task (i.e. not
succeeded or failed); it defaults to the twice the smallest cycling
interval in the suite; and it will not stall a suite even if set less
than the smallest cycling.

+ A new command 'cylc broadcast NAME VALUE' allows tasks to broadcast
simple information to environment variables made available to other
tasks downstream of them. 

+ Fixed a problem with remote command invocation that caused the new ssh
messaging feature to fail in some cases.

+ Suite info, view, log, and graphing from gcontrol View menu.

+ A new task run time environment variable to allow a task to determine
whether or not it is a cold-start task: $CYLC_TASK_IS_COLDSTART ('True'
or 'False')
