@@ -994,3 +994,5 @@ messaging feature to fail in some cases.
 whether or not it is a cold-start task: $CYLC_TASK_IS_COLDSTART ('True'
 or 'False')
 
++ Bug fix gcylc's "view suite stdout" menu item, broken since 4.5.0.
+
